<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/koyuKahve"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/piazzolla_thin"
        android:text="@string/laLoba"
        android:textColor="@color/beyazYazi"
        android:textSize="44sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="794dp"
        android:layout_height="412dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:srcCompat="@drawable/photo_6050995487521226262_y" />

    <TextView
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginTop="352dp"
        android:background="@color/anaEkran"
        android:fontFamily="@font/antic_didone"
        android:gravity="center"
        android:text="@string/latte"
        android:textColor="@color/siyahYazi"
        android:textColorHighlight="@color/anaEkran"
        android:textColorLink="@color/anaEkran"
        android:textSize="45sp"
        app:cornerRadius="0sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:strokeColor="@color/anaEkran" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="410dp"
        android:layout_height="48dp"
        android:fontFamily="@font/piazzolla_thin"
        android:text="@string/latteAciklamasi"
        android:textAlignment="textStart"
        android:textColor="@color/siyahYazi"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/butonRengi"
        android:fontFamily="@font/piazzolla_thin"
        android:text="@string/bitkiselSüt"
        android:textSize="16sp"
        app:cornerRadius="10sp"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/butonRengi"
        android:fontFamily="@font/piazzolla_thin"
        android:text="@string/laktozsuzSüt"
        android:textSize="16sp"
        app:cornerRadius="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/button5"
        android:layout_width="142dp"
        android:layout_height="64dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="45dp"
        android:backgroundTint="@color/koyuKahve"
        android:fontFamily="@font/train_one"
        android:text="@string/sepeteEkle"
        android:textColor="@color/beyazYazi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/big_shoulders_display_thin"
        android:text="@string/fiyat"
        android:textAlignment="textStart"
        android:textColor="@color/siyahYazi"
        android:textSize="55sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>